swagger token check
